--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ width="250" height="250">
       </select>
     </td>
     <td>
-      <form>
+      <form id="top">
       <!--radio buttons-->
       <input id="plain" type="radio" name="cheesecake" value="plain"> Plain<br>
       <input id="cherry" type="radio" name="cheesecake" value="cherry"> Cherry<br>
@@ -80,9 +80,9 @@ width="250" height="250">
 		
 
   <ul>
-    <li>11 cherry</li>
-    <li>17 chocolate</li>
-    <li>31 plain</li>
+    <li id = "cher">11 cherry</li>
+    <li id = "choc">17 chocolate</li>
+    <li id = "pla">31 plain</li>
   </ul>
 
 
